--- a/tooltip-demo.html
+++ b/tooltip-demo.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <title>Simple Tooltip</title>
+    <title>Tooltip Demo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="tooltip-demo.css">
 </head>
 
