add repository link

--- a/tooltip-demo.html
+++ b/tooltip-demo.html
@@ -28,6 +28,9 @@
             <span class="bottom-right" data-positions="left" data-tooltip="test">right</span>
         </div>
     </div>
+    <div>
+        <a href="https://github.com/sohrabi/tooltip">repositoy link</a>
+    </div>
     <script>
         document.addEventListener("DOMContentLoaded", function (event) {
             if (window.initTooltip)
